--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.0",
+    "source-map-loader": "^5.0.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -44,7 +45,7 @@
   },
   "devDependencies": {
     "@types/materialize-css": "^1.0.11"
-  }, 
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SarahBatagioti/ATVV-WB.git"
